# cdesktopenv

cde/: configure.ac
cde/programs/dtcm/dtcm/: Makefile.am
cde/programs/dtmail/dtmail/: Makefile.am
cde/programs/dtsearchpath/dtappg/: Makefile.am
cde/programs/dtsession/: Makefile.am
cde/programs/dtterm/: Makefile.am
cde/util/tradcpp/: Makefile.am
